# unfake-gpu.py

./: Cargo.toml  README.md  bench.py  pyproject.toml
demo/: main.rs
rust/: lib.rs  quantizer.rs  utils.rs
rust/gpu/: context.rs  downscale.rs  histogram.rs  mod.rs  palette.rs
rust/gpu/shaders/: downscale_dominant.wgsl  downscale_mode.wgsl  histogram.wgsl  palette_map.wgsl
src/unfake/: pixel.py
